--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -122,12 +122,12 @@
                                 or
 								 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
 										<div class="form-group">
-											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
-											 <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+											 <label class="sr-only" for="InputEmail">Email address</label>
+											 <input type="email" class="form-control" name="InputEmail" placeholder="Email address" required>
 										</div>
 										<div class="form-group">
-											 <label class="sr-only" for="exampleInputPassword2">Password</label>
-											 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+											 <label class="sr-only" for="InputPassword">Password</label>
+											 <input type="password" class="form-control" name="InputPassword" placeholder="Password" required>
                                              <div class="help-block text-right"><a href="">Forget the password ?</a></div>
 										</div>
 										<div class="form-group">
@@ -135,7 +135,7 @@
 										</div>
 										<div class="checkbox">
 											 <label>
-											 <input type="checkbox"> keep me logged-in
+											 <input type="checkbox" name="keeplogin" value="1"> keep me logged-in
 											 </label>
 										</div>
 								 </form>
