--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -142,7 +142,7 @@
 								 </form>
 							</div>
 							<div class="bottom text-center">
-								New here ? <a href="#"><b>Join Us</b></a>
+								New here ? <a href="/signup"><b>Join Us</b></a>
 							</div>
 					 </div>
 				</li>
