--- a/templates/gallery-clean.tmpl
+++ b/templates/gallery-clean.tmpl
@@ -29,7 +29,7 @@
 
             <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                    <a class="lightbox" href="/images/demo/park.jpg">
+                    <a class="lightbox" href="/">
                         <img src="/images/demo/park.jpg" alt="Park">
                     </a>
                     <div class="caption">
