--- a/templates/dashboard.tmpl
+++ b/templates/dashboard.tmpl
@@ -193,7 +193,7 @@
 	            <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
                     <a class="lightbox" href="/GalleryDetail/{{.Imageurl}}">
-                        <img src="/images/{{.Imageurl}}/image0" alt="image">
+                        <img src="/images/{{.Imageurl}}/image0.jpg" alt="image">
                     </a>
                     <div class="caption">
                         <h3>Thumbnail label</h3>
