--- a/templates/dashboard.tmpl
+++ b/templates/dashboard.tmpl
@@ -206,7 +206,69 @@
         </div>
 
     </div>
+{{if .bshowpagation}}
+<nav>
+  <ul class="pagination pg-blue">
 
+    {{ $idactive := .pginfo.Iactive }}
+    {{if .pginfo.Bprivous}}
+        <li class="page-item">
+            <a class="page-link" href="/user/dashboard/page/1">First<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="page-item">
+        <a class="page-link" href="/user/dashboard/page/{{$.pginfo.PrevPage}}" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+         </a>
+         </li>
+    {{else}}
+        <li class="page-item disabled">
+            <a class="page-link" href="/user/dashboard/page/1">First<span class="sr-only">(current)</span></a>
+        </li>
+      <li class="page-item disabled">
+      <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+        <span class="sr-only">Previous</span>
+      </a>
+    </li>    
+    {{end}}
+  
+    {{range $i, $e := .pginfo.Pages}}
+        {{if eq $e $idactive}}
+            <li class="page-item active">
+            <a class="page-link" href="/user/dashboard/page/{{$e}}">{{$e}} <span class="sr-only">(current)</span></a>
+            </li>
+        {{else}}
+                <li class="page-item"><a class="page-link" href="/user/dashboard/page/{{$e}}">{{$e}}</a></li>
+        {{end}}
+
+    {{end}}
+
+    {{if .pginfo.Bnext}}
+         <li class="page-item">
+         <a class="page-link" href="/user/dashboard/page/{{.pginfo.NextPage}}" aria-label="Next">
+         <span aria-hidden="true">&raquo;</span>
+         <span class="sr-only">Next</span>
+         </a>
+         </li>
+         <li class="page-item">
+            <a class="page-link" href="/user/dashboard/page/{{.pginfo.Lastpg}}">Last<span class="sr-only">(current)</span></a>
+         </li>
+    {{else}}
+        <li class="page-item disabled">
+        <a class="page-link" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+        <span class="sr-only">Next</span>
+        </a>
+        </li>
+         <li class="page-item disabled">
+            <a class="page-link" href="/user/dashboard/page/{{.pginfo.Lastpg}}">Last<span class="sr-only">(current)</span></a>
+         </li>
+    {{end}}
+
+  </ul>
+</nav>
+{{end}}
 </div>
 
         <footer class="footer">
