--- a/templates/dashboard.tmpl
+++ b/templates/dashboard.tmpl
@@ -122,8 +122,8 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
                         <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-dashboard"></i>
+                            <a href="/user/imageupload" class="dropdown-toggle" data-toggle="dropdown">
+                                <i class="fa fa-picture-o"></i>
                             </a>
                         </li>
                         <li class="dropdown">
@@ -181,12 +181,11 @@
             </div>
         </nav>
 
+   
+
+
  <div class="container gallery-container">
-
-    <h1>Bootstrap 3 Gallery</h1>
-
-    <p class="page-description text-center">Clean Layout With Minimal Styles</p>
-    
+    <h1>My Storage</h1>   
     <div class="tz-gallery">
 
         <div class="row">
