--- a/templates/uploadimg.tmpl
+++ b/templates/uploadimg.tmpl
@@ -20,6 +20,14 @@
 	  <!-- Standar Form -->
 	  <h4>Select files from your computer</h4>
 	  <form action="" method="post" enctype="multipart/form-data" id="js-upload-form">
+		<div class="form-group">
+			<label for="usr">Keywords:</label>
+			<input type="text" class="form-control" id="Keywords" name="Keywords">
+		</div>
+		<div class="form-group">
+			<label for="comment">Description:</label>
+			<textarea class="form-control" rows="5" id="Description" name="Description"></textarea>
+		</div>
 		<div class="form-inline">
 		  <div class="form-group">
 			<input type="file" name="images[]" id="js-upload-files" multiple>
