--- a/templates/dashboard.tmpl
+++ b/templates/dashboard.tmpl
@@ -197,8 +197,7 @@
                         <img src="/images/{{.Imageurl}}/image0.jpg" alt="image">
                     </a>
                     <div class="caption">
-                        <h3>Thumbnail label</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>{{.Description}}</p>
                     </div>
                
                 <div align="left">
