--- a/templates/fluid-gallery.tmpl
+++ b/templates/fluid-gallery.tmpl
@@ -17,12 +17,7 @@
 </head>
 <body>
 
-<div class="container gallery-container">
-
-    <h1>Bootstrap 3 Gallery</h1>
-
-    <p class="page-description text-center">Fluid Layout With Overlay Effect</p>
-    
+<div class="container gallery-container"> 
     <div class="tz-gallery">
 
         <div class="row">
@@ -55,8 +50,20 @@
         </div>
 
     </div>
+    <form action="" method="post" enctype="multipart/form-data" id="js-upload-form">
+    <div class="form-group">
+		<label for="usr">Keywords:</label>
+		<input type="text" class="form-control" id="Keywords" name="Keywords" value="{{.Keywords}}">
+	</div>
+    <div class="form-group">
+		<label for="comment">Description:</label>
+		<textarea class="form-control" rows="5" id="Description" name="Description" >{{.Description}}</textarea>
+	</div>
+    <button type="submit" class="btn btn-sm btn-primary" id="js-upload-submit">Save</button>
+    </form>
 
 </div>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
 <script>
