--- a/templates/dashboard.tmpl
+++ b/templates/dashboard.tmpl
@@ -141,7 +141,7 @@
                               </ul>
                         </li>
                         <li>
-                           <a href="">
+                           <a href="/search">
                                 <i class="fa fa-search"></i>
                             </a>
                         </li>
